--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "autoload": {
         "files": [
-            "src/functions.php"
+            "src/Misc/functions.php"
         ]
     },
     "autoload-dev": {
