--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": ">=7.4"
+        "php": "^7.3"
     },
     "require-dev": {
         "phpspec/prophecy": "^1.9",
