--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "phpspec/prophecy-phpunit": "^2.0"
     },
     "autoload": {
+        "psr-4": {
+            "Ordermind\\Helpers\\": "src"
+        },
         "files": [
             "src/Misc/functions.php"
         ]
