--- a/composer.json
+++ b/composer.json
@@ -33,5 +33,8 @@
         "psr-4": {
             "Ordermind\\Helpers\\Test\\": "tests"
         }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit",
     }
 }
