--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -11,6 +11,7 @@ permissions:
 
 jobs:
   build:
+    name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
 
     runs-on: ${{ matrix.operating-system }}
     strategy:
@@ -39,8 +40,8 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
     - name: Run test suite
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.php-versions }}
       run: composer run-script test
