--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -22,6 +22,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Install PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.php-versions }}
+
     - name: Print the PHP version
       run: php --version
 
@@ -41,7 +46,4 @@ jobs:
       run: composer install --prefer-dist --no-progress
 
     - name: Run test suite
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: ${{ matrix.php-versions }}
       run: composer run-script test
