--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,15 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0"
+        "php": "^8.0"
     },
     "require-dev": {
         "phpspec/prophecy": "^1.9",
         "squizlabs/php_codesniffer": "^3.5",
         "phpmd/phpmd": "^2.8",
         "phpunit/phpunit": "^9.3",
-        "friendsofphp/php-cs-fixer": "^2.16",
-        "phpstan/phpstan": "^0.12.19",
+        "friendsofphp/php-cs-fixer": "^3.0",
+        "phpstan/phpstan": "^1.0",
         "phpspec/prophecy-phpunit": "^2.0"
     },
     "autoload": {
